# ue3-sdkgen

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  COPYING  README.md  vcpkg.json
.github/workflows/: ci-private.yml  ci-public.yml
.zed/: debug.json  settings.json  tasks.json
cmake/: CiVars.cmake
sdk/: CMakeLists.txt  sdk.cc  sdk.h  sdk_callableufunction.cc  sdk_callableufunction.h  sdk_config.h  sdk_hash.h  sdk_init.cc  sdk_rt.cc  sdk_rt.h  sdk_unreal.h  sdk_unreal_array.h  sdk_unreal_enums.h
src/: bridge.cc  bridge.h  bridge_impl_external.h  bridge_impl_internal.h  build_config.h.in  config.h  main.cc  pch.h  processor.cc  processor.h  processor_classes.cc  processor_classes.h  processor_consts.cc  processor_consts.h  processor_enums.cc  processor_enums.h  processor_structs.cc  processor_structs.h  sigscan.h  unreal.cc  unreal.h  unreal_enums.h  util.cc  util.h
